Fixed issue where flipped cards misalign on certain screen widths

--- a/assets/style.css
+++ b/assets/style.css
@@ -972,7 +972,50 @@ transform: rotateY(-180deg) translateX(-100%);
         }
         
         .card-face--back{
-            transform: rotateY(-180deg) translateX(110%);
+            transform: rotateY(-180deg) translateX(121%);
+            transition: transform 0.5s;
+            
+            background-image: url(/assets/images/playing-card-rear.png)  !important;
+        }
+}
+
+@media screen and (max-width: 1450px){
+    .card-is-flipped {
+        transform: rotateY(-180deg) translateX(-110%);
+        
+        }
+        
+        .card-face--back{
+            transform: rotateY(-180deg) translateX(119%);
+            transition: transform 0.5s;
+            
+            background-image: url(/assets/images/playing-card-rear.png)  !important;
+        }
+}
+
+@media screen and (max-width: 1440px){
+    .card-is-flipped {
+        transform: rotateY(-180deg) translateX(-110%);
+        
+        }
+        
+        .card-face--back{
+            transform: rotateY(-180deg) translateX(115%);
+            transition: transform 0.5s;
+            
+            background-image: url(/assets/images/playing-card-rear.png)  !important;
+        }
+}
+
+
+@media screen and (max-width: 1420px){
+    .card-is-flipped {
+        transform: rotateY(-180deg) translateX(-100%);
+        
+        }
+        
+        .card-face--back{
+            transform: rotateY(-180deg) translateX(104%);
             transition: transform 0.5s;
             
             background-image: url(/assets/images/playing-card-rear.png)  !important;
@@ -986,7 +1029,35 @@ transform: rotateY(-180deg) translateX(-100%);
         }
         
         .card-face--back{
-            transform: rotateY(-180deg) translateX(105%);
+            transform: rotateY(-180deg) translateX(102%);
+            transition: transform 0.5s;
+            
+            background-image: url(/assets/images/playing-card-rear.png)  !important;
+        }
+}
+
+@media screen and (max-width: 1380px){
+    .card-is-flipped {
+        transform: rotateY(-180deg) translateX(-100%);
+        
+        }
+        
+        .card-face--back{
+            transform: rotateY(-180deg) translateX(100%);
+            transition: transform 0.5s;
+            
+            background-image: url(/assets/images/playing-card-rear.png)  !important;
+        }
+}
+
+@media screen and (max-width: 1360px){
+    .card-is-flipped {
+        transform: rotateY(-180deg) translateX(-100%);
+        
+        }
+        
+        .card-face--back{
+            transform: rotateY(-180deg) translateX(100%);
             transition: transform 0.5s;
             
             background-image: url(/assets/images/playing-card-rear.png)  !important;
